--- a/.github/workflows/docker-php.yml
+++ b/.github/workflows/docker-php.yml
@@ -10,83 +10,78 @@ env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: juniyadi/php-composer
 
-php-latest:
-  # Push image to GitHub Packages.
-  # See also https://docs.docker.com/docker-hub/builds/
-  push:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+jobs:
+  php-latest:
+    push:
+      runs-on: ubuntu-latest
+      if: github.event_name == 'push'
 
-    steps:
-      - uses: actions/checkout@v2
+      steps:
+        - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        - name: Build image
+          run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        - name: Log into registry
+          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Push image
-        run: |
-          IMAGE_ID=$IMAGE_NAME
-          VERSION=latest
+        - name: Push image
+          run: |
+            IMAGE_ID=$IMAGE_NAME
+            VERSION=latest
 
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+            echo IMAGE_ID=$IMAGE_ID
+            echo VERSION=$VERSION
 
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+            docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+            docker push $IMAGE_ID:$VERSION
 
-php-8:
-  # Push image to GitHub Packages.
-  # See also https://docs.docker.com/docker-hub/builds/
-  push:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+  php-8:
+    push:
+      runs-on: ubuntu-latest
+      if: github.event_name == 'push'
 
-    steps:
-      - uses: actions/checkout@v2
+      steps:
+        - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build ./php8 --file Dockerfile --tag $IMAGE_NAME
+        - name: Build image
+          run: docker build ./php8 --file Dockerfile --tag $IMAGE_NAME
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        - name: Log into registry
+          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Push image
-        run: |
-          IMAGE_ID=$IMAGE_NAME
-          VERSION=8.0
+        - name: Push image
+          run: |
+            IMAGE_ID=$IMAGE_NAME
+            VERSION=8.0
 
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+            echo IMAGE_ID=$IMAGE_ID
+            echo VERSION=$VERSION
 
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+            docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+            docker push $IMAGE_ID:$VERSION
 
-php-74:
-  # Push image to GitHub Packages.
-  # See also https://docs.docker.com/docker-hub/builds/
-  push:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+  php-74:
+    push:
+      runs-on: ubuntu-latest
+      if: github.event_name == 'push'
 
-    steps:
-      - uses: actions/checkout@v2
+      steps:
+        - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build ./php7.4 --file Dockerfile --tag $IMAGE_NAME
+        - name: Build image
+          run: docker build ./php7.4 --file Dockerfile --tag $IMAGE_NAME
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        - name: Log into registry
+          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Push image
-        run: |
-          IMAGE_ID=$IMAGE_NAME
-          VERSION=7.4
+        - name: Push image
+          run: |
+            IMAGE_ID=$IMAGE_NAME
+            VERSION=7.4
 
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+            echo IMAGE_ID=$IMAGE_ID
+            echo VERSION=$VERSION
 
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+            docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+            docker push $IMAGE_ID:$VERSION
