--- a/.github/workflows/docker-php.yml
+++ b/.github/workflows/docker-php.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build ./php8 --file Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file ./php8/Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build ./php7.4 --file Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file ./php7.4/Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
